Grace/tests/gibbs/errors/z1002.grace
// ERROR = P1038
var x
x:=-1
